/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: bruteforce not working at all!          |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-09-26 Raphael Geissert
    - GUI:
        * Fixed #672: using encode/decode_idna on a url makes it illegal
        * Fixed #711: regression in r814
        * Fixed #716: possibility to add a catchall on aliases/subdomains where status != ok
        * Fixed #706: Confirm before restoring backup
        * Fixed #639: reseller/order_settings.php converts html entities back to their values
        * Fixed #555: catchall -> forwarding doesn't work
        * Fixed i18n regression of r811

2007-09-23 Johannes Schobig
	- GUI:
		* Fixed #639: reseller/order_settings.php converts html entities back to their values
		* Fixed #672: using encode/decode_idna on a url makes it illegal
		* Fixed #675: admin's view of users still uses old .tpl (without links to domain aliases) (thanks to Grégory Marigot)
		* Fixed #693: SQL Syntax Error on Edit a Domain
		* Fixed #694: Double icons in the menu
		* Fixed #695: Errordocs Cleanup (thanks to Benedikt Heintel)
		* Fixed #710: Broken design, missing units

2007-09-21 Benedikt Heintel
	- GUI:
		* Fixed #679: helpbox about www when adding a domain/alias in reseller/client mode
		* Fixed #685: Too much htmlencode (thanks to Grégory Marigot)
		* Fixed #686: hide system support in main menu when disabled (thanks to Grégory Marigot)
		* Fixed #687: hide disabled features from the client main menu (thanks to Grégory Marigot)
		* Fixed #692: docs/fedora/packages is missing caching-nameserver
	- LANGUAGES:
		* Updated French translation (thanks to Grégory Marigot)

2007-09-21 Johannes Schobig
	- GUI:
		* Fixed #573: customer possible to catch all mails for severall domains